# vendorsolution_okf

./: .env.example  .gitignore  .repo_map  ARCHITECTURE_IMPLEMENTATION_GAPS.md  CONTEXT.md  KNOWLEDGE_TRANSFER.md  LOG.md  Makefile  README.md  ROADMAP.md  SETUP.md  STATE.md  debug_test.py  extracted_components.json  extracted_rules.json  list_models.py  log.md  patch.py  patch_api.py  patch_mcp.py  patch_search.py  patch_solution_generator.py  patch_task.py  patch_task2.py  patch_task3.py  patch_task4.py  patch_task5.py  pyproject.toml  requirements.txt  state.md  test_limit.py  test_limit_engine.py  verify_all.py
IKP/: QUALITY_AUDIT_GAPS.md  readme.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
history/: 2026-07-15_DELTA-2ddaf57c.md  2026-07-15_DELTA-956c0ce3.md  2026-07-15_DELTA-97d226bd.md  2026-07-15_DELTA-b9716a42.md  2026-07-16_DELTA-06d08eaa.md  2026-07-16_DELTA-0c04b881.md  2026-07-16_DELTA-1e2f73da.md  2026-07-16_DELTA-5025709d.md  2026-07-16_DELTA-57710bda.md  2026-07-16_DELTA-6350698f.md  2026-07-16_DELTA-94555159.md  2026-07-16_DELTA-96ec2c42.md  2026-07-16_DELTA-aaa06948.md  2026-07-16_DELTA-b32a8af0.md  2026-07-16_DELTA-c5a55671.md  2026-07-16_DELTA-cb838aa1.md  2026-07-16_DELTA-cc64c2f7.md  2026-07-16_DELTA-dd384b7f.md  2026-07-16_DELTA-e068d633.md  2026-07-16_DELTA-f4d548a5.md  2026-07-17_DELTA-14ce5c72.md  2026-07-17_DELTA-2c20c759.md  2026-07-17_DELTA-2cb67aa7.md  2026-07-17_DELTA-34ec19da.md  2026-07-17_DELTA-704ce310.md  2026-07-17_DELTA-7136e27f.md  2026-07-17_DELTA-83b85c16.md  (+5 more)
tests/: conftest.py  (+14 more)
(+166 files in other folders)
